 * Computator.NET, 2014-2016, Paweł Troka, ptroka@fizyka.dk

 ### --------- Unreleased -----------  08.05.2016 23:12
 * = Fixed bug in binding exponent mode from edit menu to exponent mode in code editor (still doesnt work in AvalonEdit thought)
 * = Fixed bug in chart edit property window causing ComplexChart to not redraw after changes
 * = Fixed bug in ComplexChart GreaterIsLighter and GreaterIsDarker methods when NoCountourLines selected causing pitch black chart in GreaterIsLighter mode and not accurate chart in GreaterIsDarker mode
 * = Fixed visual bug in polish version of "for values" label (wrong placement)
 * = Fixed minor bugs and typos in dialogs like about, features etc (for english and polish versions)
 * = Translated all previously missing elements in polish version
 * + Bug reporting now includes link to github project issues page
 * = Fixed very important bug in ScriptingExtensions - all outputs in application are now culture invariant (not being culture invariant before caused some output in non-english versions to include comma (,) instead of dot (.) for decimal separator which caused bugs when output was used in input - because we always use decimal dot (.) in TSL for decimal separation)
 * = Fixed important bug in ToMathString(this double) method from ScriptingExtensions, in MathematicalNotation exponent was in format just like in engineering notation (eg we had 10⁺⁰²³ instead of just 10²³)
 * + ScientificNumericUpDown supports now NumericalOutputNotation from settings
 * = Fixed important bug with matrix unable to be created if it had any sqrt(real) functions inside (this was caused due to sqrt(real) returning dynamic, fixed by creating new matrix construction method)
 * = Fixed yet another (this time minor) bug in output - i or -i was resolving to 1·i or -1·i instead of just i or -i
 * - Transformations removed for now - they cost way too much work to make them useful